# ChangeLog for app-misc/terminal-colors
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/terminal-colors/ChangeLog,v 1.7 2013/07/28 09:19:52 jcallen Exp $

  28 Jul 2013; Jonathan Callen <jcallen@gentoo.org> terminal-colors-1.5.ebuild:
  Fix dependencies

  30 May 2013; Tim Harder <radhermit@gentoo.org> -terminal-colors-1.4.ebuild:
  Remove old.

  30 May 2013; Tim Harder <radhermit@gentoo.org> terminal-colors-1.5.ebuild:
  Add PYTHON_REQUIRED_USE for python-single-r1.

*terminal-colors-1.5 (09 Apr 2013)

  09 Apr 2013; Tim Harder <radhermit@gentoo.org> +terminal-colors-1.5.ebuild:
  Version bump, migrate to python-single-r1.

  13 Dec 2012; Tim Harder <radhermit@gentoo.org> terminal-colors-1.4.ebuild:
  Fix LICENSE.

  29 Feb 2012; Tim Harder <radhermit@gentoo.org> terminal-colors-1.4.ebuild:
  Minor description change.

*terminal-colors-1.4 (29 Feb 2012)

  29 Feb 2012; Tim Harder <radhermit@gentoo.org> +terminal-colors-1.4.ebuild,
  +metadata.xml:
  Initial import. Ebuild by me.