@@ -2,23 +2,19 @@
 Hash: SHA256
 
 DIST terminal-colors-1.5.bz2 4080 SHA256 c92de036ecfaed05f65645e3fc1736e711fab48293ddf808b2ffa9a5422acecf SHA512 628439b314b29ec3a0807bb5b3cfec4af20ea03b94f5cd4a4b9a5c4fa4f9da74eba3b972a48a3c6cdbd4a8acf55610a60e055271f4d0292566dfd239b7668d93 WHIRLPOOL 11ccde0f4838f4e8a83fb25206084432e3fdbb3be1e23f47dfbb246cb785248fc63ce8f02d24ae79c8060998e2e105532e5371719ce26e83a9252eaa671f363c
+DIST terminal-colors-2.0.bz2 4604 SHA256 50c7c7647b3cbbf55ea8314ad81d71bbe301e7b7f7241017a6d16f7ff93ce66b SHA512 b5f253841d29057ca4236b5291fb58f0ed2e02404bf3145f7ca28c49e5cd22ae98df4b40ddc7b5f74c562cf87cc192f3d8c600fd83aefd850f25e03544ddcc25 WHIRLPOOL 70d302038257959e3c9c62788811d9db70acec36ec866c608c0dbe0640266ebb44b5ed382659288820bdf7a9e372c18e5c04f4afd555b78baecdcaf175386184
 EBUILD terminal-colors-1.5.ebuild 772 SHA256 2495740a663f4f3c67c1e7cd6dc3488c2b53ae7be0ac61092fbca0224d7e2dd5 SHA512 782070e62166662a94694ed3b88d97818aad5419b129f7db2c73523f0d8128bf04d624c3f497f0cd2c8292321555ce81feb5067a996dcd40e078f9f4aa7f3bfd WHIRLPOOL 784cb4a37bd4981fbf35446663c3d9322dac442da93459491bdc08b80d63a2724c2f199101a5fe63f5a601813ae6bfadb3901c09e3557403438c3d1d90b0f34a
-MISC ChangeLog 1063 SHA256 266b0f06763788447cf1221f2ecc9791eb18a09afc0256af723005811ef86ed0 SHA512 287db165815c48c86797fc63bbbd35ce806864976c51ee995a3dbe00b26755accc97e17253aab1ed82ab3ab94b68febd6cd50099580a20c201aa2db3f3eee4ef WHIRLPOOL 3220ca740be2852567f8467e74b26418a8450cf6b3e470c0cffd3d06fca7f9fd67a9b5bff3c16d3503a0e6c73a9afbb4373afd4f1447ec62c4680be20ce516c7
+EBUILD terminal-colors-2.0.ebuild 774 SHA256 f9addb4d42324d983e7664deec708ed9db3054acb34153031be98a88dd537af1 SHA512 b0703b69a7fe81f9c129010aa6b2f09d3221f1dff7fc4dd87b53905dd0033cd1a40bd4ee29601e0ef1a2aaab9039baad5d2ef58e43ec9dcd221583d7c992c39f WHIRLPOOL 64d218014cb3164301eed0c447e56755751d2f27545091164853ec9cdd07ee818db0cf91ba69e8858bb0554a1f1e84d9cbe40b0b9c791b788cfc31c669051bef
+MISC ChangeLog 1196 SHA256 b40071594f22d896132963364b6451e7ce4e5facea9cb7c1c18ea40dad54f384 SHA512 3842f38777bc7bfd9aeff6db05fc8c468c5138046036bf601501f1e50d6955f365f554001f10f921fffad88511ce81f0f87f00562c7407e2dd0ae9d1c9376591 WHIRLPOOL 988f2e0309e4904e03cd2b9b11ce62c5088e6963d33f5ec7baa7b4c41d558a68334863d55187666c5f147d0f9edf5619b2d2ad348d755c7df30df94b76bfe6b5
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR9OI5AAoJELHSF2kinlg4EgoP/jIpLbFsKqrgO8QICPymYLAk
-bhMyfZjCva0Y2yMOX4YVqQpYMVbhhoFp1X1owJo95MY9cvpDKSIMUQgi9OD8vd6q
-r4o2+dx2MIsdlQn7/h5MA/RBylZHTdAtjDCS4yGWNVSgUhYpZr3cUYoIxjVuKuoj
-gb6oRvfh1QLCQYnHODuqjMrTGFWYW0DRm0oNOUbieFcWbI/cC7KUoLQ34oRRTNTU
-v1Fsn/8PGLSj7BU50Yh341WGQQSjyQNgrw3JB08X56pXhRseFKd4ivvwBmSquMvO
-LWe3nNb7H2xXFxvmBWzbuH6vv1FcBIwr1Idhzn+Q5VYhfVLqNAzQ7xSUVaSxY1j/
-QZ7uOZkXGqAuZDXye0YCR4mjUuRNcRLvIebeJRXh+GTLt0GLtzoOCRVwnkZ1+j0m
-sbOJtS4TDrx4zJX6a6GfvsnywWuFXqW0NtGcLoEhAXlr2efwMvMcI6CmR8k7AATS
-Z5TQjdnBD3sF7T7vYl1HJXCnm5HqhlUxU5DyutmJA711ptLBDBn5CwzFy3/+/fad
-lf+TGcRHgQx5almYqudly6Rc8f0Xb03AXnzetHU07FSto0dmeOMTN0ljQLxXp8xo
-8UZnTKNyKDu3dOnqc4UAKUPNvBvrK4tz1L8w1ZOTe9wuZnXO7KXv6eEsQM3wlVFX
-jB/NuMIIRJA4IRCWSp/u
-=MOwc
+iQEcBAEBCAAGBQJR/+h1AAoJEEqz6FtPBkyj3ukH/13+EZaPmVldlAFQ/3SE9jq/
+nnp9LBS8H0Ba8iVDqSPiCFkLhbemrSthDiiddCBZabAv3OBkm6ZYtA3s6Oi91V8u
+qwDCNmIwHNHj+G8hrWHevBTO4rkgk3u4jBBKmwArdXoJETH2MQxPRtxt5G27e6BJ
+5RkseKf3Z4GXtXHN5853fgYp8EB2WdwJ24j2T8HMne6hFuFzFWuvKl9p48HyXa7S
+e87ro7huQykZaxwNDX23q8YWQGAGikgunYG7riem9PndOnzSIFTG3cVkiFB/+eRc
+3bcAXIJkR53TjtC3futPiIug+AwCGH2F4m5S/XzbL8Hm181BtZEVYo3IzwuBvLw=
+=2eY6
 -----END PGP SIGNATURE-----
