@@ -1,0 +1,30 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/terminal-colors/terminal-colors-2.0.ebuild,v 1.1 2013/08/05 18:01:21 radhermit Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python{2_6,2_7,3_1,3_2,3_3} )
+PYTHON_REQ_USE="ncurses"
+
+inherit python-single-r1
+
+DESCRIPTION="A tool to display color charts for 8, 16, 88, and 256 color terminals"
+HOMEPAGE="http://zhar.net/projects/shell/terminal-colors"
+SRC_URI="http://dev.gentoo.org/~radhermit/distfiles/${P}.bz2"
+
+LICENSE="GPL-3+"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+DEPEND="${PYTHON_DEPS}"
+RDEPEND="${DEPEND}"
+REQUIRED_USE="${PYTHON_REQUIRED_USE}"
+
+S=${WORKDIR}
+
+src_prepare() {
+	python_fix_shebang ${P}
+}
+
+src_install() {
+	newbin ${P} ${PN}
+}
