@@ -6,18 +6,18 @@ DIST libjpeg-turbo-1.2.1.tar.gz 1755264 SHA256 cb3323f054a02cedad193bd0ca418d469
 DIST libjpeg-turbo-1.3.0.tar.gz 1361603 SHA256 2657008cfc08aadbaca065bd9f8964b8a2c0abd03e73da5b5f09c1216be31234 SHA512 4d34c3c5f2cdd70b2a3d1b55eeb4ce59cb3d4b8d22bb6d43c2ec844b7eb5685b55a9b1b46ad2bc5f2756b5f5535ccad032791c3b932af9c1efc502aa5e701053 WHIRLPOOL 13c1366b9bef87cab42c88f75d1ff7eddb4ea745e0056154f1f3fb27deedee077d662395bada3bd5c18d6f8bf744d0b1f3d465967d33b453ea2acc327a6f166f
 DIST libjpeg8_8d-1.debian.tar.gz 13676 SHA256 70ec6689b0ad85739802cf3ebbdcc12ea01e21edd8f931c614b25b44cf199057 SHA512 7def4f13524f0af3b9adf35a370027a18f43b9a635f56a17d5bb7883370db8b18b8a12737d0f0cb4b0287ccf8fb474eb5f754de6b398ffe7d522c54e5bf68040 WHIRLPOOL 94526c31d401eb14c9bf0f7115e13a27886ad58863e25d6653eba2b2f5ef260ec272368d2b9d9934bd75b1e5b5f1afc97230e540248efc24d6e85e5680399d27
 EBUILD libjpeg-turbo-1.2.1.ebuild 2889 SHA256 298967f7a84c7426d48e6ae9a4c1455c5d7f83a0119a74a21c0ce189593daa17 SHA512 840fb7c42ce77f77074571b5b999bc328ec0957680b1528d8177dee72ad33cdcd12087093f2b4d1e204f3cf5896706b43e906d70f71477659b5a4a42fe74e309 WHIRLPOOL a9b0908eaa1d63c077d2dca8a5116a1d9c7e5baf91edccdcd3fc88d3d8458b62f765a48ee4936708c3cf3b6e801cc09aedc50cfa0aa27bb952c2b27f32ce0e40
-EBUILD libjpeg-turbo-1.3.0-r2.ebuild 3131 SHA256 db541be0af8456b975aa3360b31a315d0da5d073654b3123829489bd445c0fa5 SHA512 f28a4e727fcfa6ce3a87587653614df5ccb7e7c7edaa768a2712d74a55f8a44a80d96279524bef55b6cb339a2bc81db84372dd3e93784cc5c907c1833855b13b WHIRLPOOL 358c67f21c3dbac790e9783c09c79defb9c566629fd21886f4a433377a7cda99eabf2eb4c72a0ce6dc0e9a493c4abd71d9b8f0c9a271c47eafe4e6ab6625ca5a
+EBUILD libjpeg-turbo-1.3.0-r2.ebuild 3124 SHA256 3c7be7d7f32ce5eb6999b39d5d109a587a758edcbc04fea6105c510178cb08f3 SHA512 57960019ebe9b87c3702b48903938db63481a1372ab15be8b52936f19c9ad0ee8258337f94539534626c1a6f1dd07d4c3ba57053770a0fa211d51f262cffed88 WHIRLPOOL cec6c5ce9ea6144fc287b9758af3d6101963b96b4dd234e567ecbef0ece122a4f1db02eea3201880d391fe9623a3232356196f33bebfb55e99c6fe9fd5a58154
 EBUILD libjpeg-turbo-1.3.0.ebuild 2892 SHA256 ba03668d33428c8d13ebc3af29d6c2b1441d61e4485a9dac257ab4ec57af0c73 SHA512 935d92b286b82ca218de8d0fbb1f5fc846e2852c9f34f76765c2f6f14f592ab6692fc5aed820902e9c7de34362deca393d9ab4f9089e67085a7ead1858986ed6 WHIRLPOOL 52b06e26cd55b57bb168a6ecac6df25e16685cd21fa0e926db3ac486550d67a2055d3be920dcf9bde760fbce98b5add62ff72040e48c6aaa148c02620662f0cc
-MISC ChangeLog 10939 SHA256 709246ea114ab428a775538f3e0f5e7a25aa0d4de784a1968759510adc53e5b4 SHA512 88fb0a6d5b53b5f34d0cdc9a7463180575cc146a46d231a1e751a9f34a123a2b18b554ab5c600f5d5a741fe56c20a162f831e83e347157187143d5647f5b1188 WHIRLPOOL eac1a9eb8ad78475165d344e360bb87d79223e3538099c8bcdb50cbb60369655b724b7f30ae602bef838918cc7c24c817d423a1640ec98d3a0933aa814565663
+MISC ChangeLog 11094 SHA256 321848362fe8c3d1065bae2377f30d1e20834e20198283f5bbdb6927c515c6dc SHA512 23ceedb7abcc4b43a0c4c41e3779bdb12ca2ba65a955a63f88f4801c333f3d9ea7120d28bcab170491dab5ee68871dd43c5d2ff3540e297b7713fb926f178a4a WHIRLPOOL 7dfd94d9cdf46adfbb9cbe41e137fda764d3e30b0c055bf2bc122902ac47f94483f686b310f9e9f86aca06757899d1f36e68d97ea3e77c9f090833695936e0ea
 MISC metadata.xml 367 SHA256 6b8c81649360de8af20a434749d90a9ee689026f959c814e22dac83513c5b0d4 SHA512 0dc1a5f70e560471119207724bc0015d1ae6b80c7da5d2305479b681ae9dca487dc0a58b5db45cc033d3c12ec997902b1c42c664efbfdff8cf3e1570259d0835 WHIRLPOOL 5686f917bfedc7f73923a18e99e8fa64eadda2cbe476d8b6c527be83f283acad01e0fedb5d4c9deb1dbf4f21538b69b3446db3304af782fb76e4b009c6bd3822
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR/0IQAAoJEEdUh39IaPFNaKcH/3DRr/0+rKpI3OmdKPZ1Py4X
-tE0/ZFl8JVrv/0w7Mbfqe1PW002jXl64mqQk+19050nZ3TM/PSwTV9J3gTPOChAt
-5f8oAOmGO9Gg4PoAj+5djHsvg8dbJHNT5s/Inevc5e5/CIzZMs1fqLpH2Vm072I1
-0OrHQrEWW5eO7enGe5yeyn3pFGYiO0WduAZsoC6+fCwkd3faSgzHcE17JMuDu6YO
-AhFJnWGl4VQyQZ30CX01ucfrbwfalxY+dQHm/0CNRYJzu8dkFJaESct5ijB9x8sY
-LX5y/7TJRySY3P90nohcTgvgxdYhwzwDySJSgnodc0UBpaUBqLGv0SMD1/tL8sc=
-=5qhG
+iQEcBAEBCAAGBQJR/+s0AAoJEEdUh39IaPFNGpsH/1fA/0m+ASRLncbY+nw7Yqfn
+Ovq0DtQlcQayVvmnt82W7BVuokqf6YVAKf3DpdtpoYhNvtGO5fC72CbTyYflzvlw
+4BqXCc+dNs9ag2KZRgU3UkU6N3Vh8wk8gjc+EYWgiYruPhbZDbn/enM1XnIXVESx
+/rN8myhlzfI14DKXa4+GDvjQsjXPM1I1zZtKTB9ntRLsWEMrGct0QsYvWdqCDxxQ
+i3G4vHkn7tNamotZMV8GbsWUclZcG7UwbQ3smn20VdSguquwbE3IwlS5r0b3f0MM
+FfK6rEP76Tsom41x0knYzpxTZZPLv7EUdLUMbIYZCFFjo4TcvUByLFF8xwg001Y=
+=TNC9
 -----END PGP SIGNATURE-----
