@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst postrm prepare
+DEPEND=app-admin/eselect-awk
+DESCRIPTION=an (often faster than gawk) awk-interpreter
+EAPI=5
+HOMEPAGE=http://invisible-island.net/mawk/mawk.html
+KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~x86-macos
+LICENSE=GPL-2
+RDEPEND=app-admin/eselect-awk
+SLOT=0
+SRC_URI=ftp://invisible-island.net/mawk/mawk-1.3.4-20130803.tgz
+_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=3e7d48691cc975db31973cb421d688fa
