@@ -8,22 +8,24 @@ DIST mawk-1.3.4-20120627.tgz 323285 SHA256 d2158e04993a9426dee9c0dc9b654170bdcb6
 DIST mawk-1.3.4-20121129.tgz 351557 SHA256 e85523a7d09a1ccd23f50166f3288db70f69777aea36c2de7987ac89e5d56643 SHA512 2c716a351a13422777e0ee09c693c5048f859f962a71326fb04f0a59d3dbb60c0197285757e817bb13acddfb52e74a9661503f2a1842231367b7e9771899fa57 WHIRLPOOL 18f29a3cbe63c257ae1c246543a1cb1042bbc39075a56a93df94f80b3e6debddeddc075e0f6c2af279f299413afbd3648c3378bba37085bf622649e065d769f0
 DIST mawk-1.3.4-20121209.tgz 354028 SHA256 3ba7c42eb7d18f97c48b8411e3a77c87447ccda863850324ceda91cb3c37ebca SHA512 9b4cb064080a5262ea482ec274cf760d5b89b378440073e3f1b00dbcec1bd835abf73ba1757d82740af6ed6ef55adc00f9cc147531352421c19cb2d7f485b64a WHIRLPOOL d7e3959b6fce540bf9840c71ca36fc33dbcb38c078959b4960b9190c5b12872299556749204ccf6c576481985062a0a5502e8ceb69bb0051606a00eb56e759cd
 DIST mawk-1.3.4-20130219.tgz 354004 SHA256 0382aac7114f409afe88e6f19128eca1febc60a1ad61b44dbacc69bf8ee0f93e SHA512 9b5921831b1f1b283ab11634481e9407df694f698da595c70356f4d47a67daf3da5baae9b9d07e240579be70adf131b9cfe25ab40073d110691cf8d2e7032603 WHIRLPOOL ad8ca75e563af1ab72812c9c78bdd8a6c9cada90e3c00f88fbaf0b468cca55c3f37edce3ca169ca9f14d7bf2e6187d8a5a16302847d381c2575c480a499b988b
+DIST mawk-1.3.4-20130803.tgz 354125 SHA256 a44e2294a4ea7ac33a212cc23a681631b3af49bf3be533c6d33da9ed27d79f7d SHA512 a6cfa9bc42b98d0a3f4c1ecc19ea89aa7557b7dba8f6dff041cd2b4ae438ec6de08018968bdd9e5e0cb763cc798e112080bfe20163642ab82cce8657135d61a6 WHIRLPOOL 9cd794ab6bd5f3bce6b6525697bdd4e78a2938de744e9dfb808391d542176d9a1d613df83cc74e7a32a7d8184e89b8977fca1d1d2650d2d46babdd1b44d92d04
 EBUILD mawk-1.3.4_p20100625.ebuild 897 SHA256 e366fc344ba71ec920c23b2282c3b5ccd0121cfb1717c843cf7e8a9972ba5fc7 SHA512 77e89387c4bcd9b889a789ed275693bd148d05b3e845fcd379ae6712004b5ba0e68b91544dfcde8da55618c7ebdabea7352b563b29a4e05c670358ad490626c0 WHIRLPOOL 947ba43e75c362497c2d70dd20ee9d2c36f07ee1b312b637387eb902eb1836a590f541ad76c1120b8ad5a015f5964c1c0fbde3f28027e0819410362459c177fd
 EBUILD mawk-1.3.4_p20101210.ebuild 869 SHA256 b891e56f8b8f1e50437a26773ebcf88cb8d3708e1f01390f50ca7ec19325bd89 SHA512 0aeadd87f3b2b9e363e30a3e171549fdcc9c3fd88b70ba1c8577c80a0a07f0dbfc944f07a11f091ce859f8cb088103f77230ee6e5edc984a78dbe338e0be1a3e WHIRLPOOL 185073ae209460323c1ea5ce1d006dec77e16365fe9e0f6974080764d3b0181e05d17b69253d867f37881b1d10bf83ed058622440a821532bff72f1c12906199
 EBUILD mawk-1.3.4_p20120627.ebuild 1013 SHA256 b09ca47de04dc05aa64eb365ff1e4db2fa60460ab18745bb836e709b8acc221a SHA512 dd2dd857a2538ebc9d319aa55dc44292454a6e335889b823cdca2fcfe66945c7764d52244144ae8f5c6ecf1f9c794868a9df10f2f3a0267e046240fab2596586 WHIRLPOOL b74271f27dd0d0b42a8afd55ba0eaec878bf39c1b02ad099118fdeb50c39890e1f19a8e2ed476bb47ee7f71e84ebddc8acaa80093c2384cbff26cbff7def7c39
 EBUILD mawk-1.3.4_p20121129.ebuild 962 SHA256 a24c49aab7f2c85666b984cbfb8ac827071824b3ef4345b0b138fd5508997020 SHA512 5721a575116752b0aa96cf705943f784653eed8b27db9b0384601c23a4e0d831b25cf6ad515487ab987ec7cd1b0edbe606782e7584fef2aff1e3eedbaf5b7550 WHIRLPOOL f966bed987ac6f9dd432f6ee953e73f10c1f97f0b45b154a2d5c759c9edbae52f4803ce05c7eba265958d6e527ff0aa4d7b58d695f1e427076660048ca5eedc0
 EBUILD mawk-1.3.4_p20121209.ebuild 962 SHA256 2fd6deb683c7ee48692249c0011e96c14ee0619298598b27c4b0e345355bc310 SHA512 fa3ad7bc2fe87284fdddb8250d83c092302c5081ff002e6960f2ce73d1aeac584f26dded0b2202731e7960c5dc73396a6d19555b57cfd8248d7b52e270e6671d WHIRLPOOL c502bb6764dd620f7d88df511b0bf941cad8c9e5dd860dcb664bd80bfef4586123f02d07d9ef1ed77bd4c40976073cfae84270e3eaaba629f71539c5d4911973
 EBUILD mawk-1.3.4_p20130219.ebuild 954 SHA256 2edf24ada1b870285cf0e8a279f87327dee85793f160e36b8fa0779f6b8df3c9 SHA512 ca42166ef76594c01360e78f78845bd160891fd4157378e82634767f0cb02c5c33c14991e51adc90fe9dac769660fc07b06b4633ccde4414eef430059605c72d WHIRLPOOL cd1273bf86539f3410062ced074dc900a3e398f513860869f86938b09ac29c0524bfb5e3c090346365ad926682db568d8a354443030ce068d63db87dabbbc182
-MISC ChangeLog 3841 SHA256 afaace5aadd02fb9ac9cffc50c7f243aa54ff8b01fc588a35964c6c413d92307 SHA512 8d11c5572e1c6bc4e9e4bd6213a8e3d406e08921b79a87a008b07974469bb57e44c988c7ed712ec84f6f73e9d7e026317d4aec52eab8b2b089b03ba77a8aa2c3 WHIRLPOOL 10d82cc88cde522ed2b3472b6e0577c641de4a47487a2c60ab56b18146afd1251abd0271a7eaab29f61c3b889d094142cfeb2592996dd978b4f30f2b54b85992
+EBUILD mawk-1.3.4_p20130803.ebuild 954 SHA256 c870d63ab60f9556cc851a27dd7cda50d0c4ed02ae93472a76a2c17fdf5f2abb SHA512 92e00162befbba43f223a9a6afd82a3cbce4359a0a0a595d03d9e92f605de6c01427a03a74247ee4031479131c3e3461d40f575c7fc2c7fd5d8179348dfd39af WHIRLPOOL 5a64d3a2b71915fda5fd1d209b622fe1e0b8f9c10314ab060d1b326161ec3f7afb522e99b1bd897a62588a0f105de57bb46d4599cec453085e302659216e813e
+MISC ChangeLog 3974 SHA256 aaf748a8c839e9df3a06daaff94dbea597f5bcdcddbb0f8b7338eab59aebb9fa SHA512 643db9e98773445bc2aa3228231d41f50c755693f41378cd8505311f9d1a240968b24742b51c8147d37d6fa0f1c1b0afeedb4a90ad951c2b23386200e768ed69 WHIRLPOOL eb45d7bcfedef8a96e27c1d694a7544e6007f91403a746fbb82956123a55115b6ffa1f1d8f72f8a67bf0315e94ed97db0b550e5b153fb3542066757c3196ca39
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRO9vpAAoJEEqz6FtPBkyj5dsH/1PEDLrMsKfw7rqjNg912gYM
-e8ezmbEEFsRWeCUiG4c2WxM+QSIye2V73ZZcmQ2JZq0ZwCYM6+/TO/HIe37TgN24
-K2G6EWHT8sIkNg5KqpbwGAjOe/O8GZRSttiSkXODGP2Ki6uudODUVkaTueKSjyFW
-8WXc9Faj9GNmla1OvbjFhbPS3971K5STlvA3Ydt0s5dLtQ1rM+JVDx1T1UhDtm1x
-TmAB5YrxOHOZaiGLCgnrKoo4Bn8E75ZltIot5/f72nuvzw1CXDntCxjDaw2s2Ju5
-Zxhu1G7ZDdGTYc4OUUJEeXsgonFaffaqAq7PCaSKrOEaz6yikDTllORmxy77ecc=
-=UzGx
+iQEcBAEBCAAGBQJR/+oQAAoJEEqz6FtPBkyjzO8H/1yy52nio5ZCKDZkTZNS79Li
+CIicMCgxDKWMfCSY4CyHhmGU68KbiSC8KtJ7/gTAmIlR131imHY6NrwsoadZ4AKl
+FsuU/Cv/BHOziWI3NYetQyQqvt7mc9nvXe+WEjqHt927LucfDWXh9OMedwH52VES
+p3SfpnbZQSCRmgFb87oM9nwochk+X3wk2g3eHfC2lQwS6W4LWogdmsQjR8WS5DM5
+G9dEcB/k+XQRrhCAT5ZlWn5URl2Bgjh4xLzafWQLVy5fajfTK7eiqs4ehGccFB/0
+7ZR2cksZ0/6yOzkToqZoZl5mawSiL29AokUl+emZK1nGX7JGHvwrc/PRTOTo4t4=
+=FWrg
 -----END PGP SIGNATURE-----
