@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/mawk
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/ChangeLog,v 1.29 2013/03/10 01:03:33 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mawk/ChangeLog,v 1.30 2013/08/05 18:08:15 radhermit Exp $
+
+*mawk-1.3.4_p20130803 (05 Aug 2013)
+
+  05 Aug 2013; Tim Harder <radhermit@gentoo.org> +mawk-1.3.4_p20130803.ebuild:
+  Version bump.
 
 *mawk-1.3.4_p20130219 (10 Mar 2013)
 
