@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/terminal-colors
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/terminal-colors/ChangeLog,v 1.7 2013/07/28 09:19:52 jcallen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/terminal-colors/ChangeLog,v 1.8 2013/08/05 18:01:21 radhermit Exp $
+
+*terminal-colors-2.0 (05 Aug 2013)
+
+  05 Aug 2013; Tim Harder <radhermit@gentoo.org> +terminal-colors-2.0.ebuild:
+  Version bump.
 
   28 Jul 2013; Jonathan Callen <jcallen@gentoo.org> terminal-colors-1.5.ebuild:
   Fix dependencies
